fixed text color bug on mobile

--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
   font-size: 62.5%;
   padding: 0;
   margin: 0;
+  color: #000;
   background-color: #ffd3db;
   box-sizing: border-box;
   font-family: 'Neucha', cursive;
